# Mini-PGW

./: CMakeLists.txt  README.md  client_config.json  server_config.json
src/client/: CMakeLists.txt  client.cpp
src/config/: CMakeLists.txt  config.cpp  config.h
src/server/: CMakeLists.txt  server.cpp
tests/: CMakeLists.txt  tests.cpp
